--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "scripts": {
     "start": "tsc && concurrently \"npm run tsc:w\" \"npm run server\" ",
     "server": "node node_modules/ng2f-server/server.js",
+    "build": "npm run tsc",
     "tsc": "tsc",
-    "tsc:w": "tsc -w"
+    "tsc:w": "tsc -w",
+    "pretest": "npm run build",
+    "test": "karma start karma.conf.js"
   },
   "keywords": [],
   "author": "",
@@ -34,10 +37,16 @@
     "ng2f-server": "~0.2.3"
   },
   "devDependencies": {
-    "concurrently": "2.2.0",
-    "typescript": "~2.0.3",
     "@types/core-js": "0.9.36",
-    "@types/node": "~6.0.46"
+    "@types/jasmine": "^2.5.38",
+    "@types/node": "~6.0.46",
+    "concurrently": "2.2.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.5.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
+    "typescript": "~2.0.3"
   },
   "repository": {}
 }
