--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "ng2-fundamentals-demo",
   "version": "1.0.0",
   "scripts": {
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run server\" \"http-server dist\"",
+    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run server\" \"node server.js\"",
     "server": "node node_modules/ng2f-server/server.js",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "test": "karma start karma.conf.js",
-    "heroku-prebuild": "npm install -g http-server"
+    "heroku-prebuild": "npm install -g http-server",
+    "postinstall": "ng build --aot -prod"
   },
   "keywords": [],
   "author": "",
@@ -34,7 +35,8 @@
     "reflect-metadata": "~0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.40",
-    "zone.js": "~0.6.26"
+    "zone.js": "~0.6.26",
+    "angular-cli": "1.0.0-beta.28.3"
   },
   "devDependencies": {
     "@types/core-js": "0.9.36",
