--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "ng2-fundamentals-demo",
   "version": "1.0.0",
   "scripts": {
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run server\" \"node server.js\"",
+    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run server\" \"http-server\"",
     "server": "node node_modules/ng2f-server/server.js",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "test": "karma start karma.conf.js",
     "heroku-prebuild": "npm install -g http-server",
-    "postinstall": "ng build --aot -prod"
+    "postinstall": "ng build && mv dist/* ."
   },
   "keywords": [],
   "author": "",
@@ -36,7 +36,7 @@
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.40",
     "zone.js": "~0.6.26",
-    "angular-cli": "1.0.0-beta.28.3"
+    "angular-cli": "1.0.0-beta.11-webpack.8"
   },
   "devDependencies": {
     "@types/core-js": "0.9.36",
