--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "reflect-metadata": "~0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.40",
-    "zone.js": "~0.6.26",
-    "angular-cli": "1.0.0-beta.19-3",
+    "zone.js": "~0.6.26"
+  },
+  "devDependencies": {
     "@types/core-js": "0.9.36",
     "@types/jasmine": "^2.5.38",
     "@types/node": "~6.0.46",
@@ -51,9 +52,6 @@
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
     "typescript": "~2.0.3"
-  },
-  "devDependencies": {
-
   },
   "repository": {}
 }
