--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "reflect-metadata": "~0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.40",
-    "zone.js": "~0.6.26"
+    "zone.js": "~0.6.26",
+    "angular-cli": "1.0.0-beta.19-3"
   },
   "devDependencies": {
     "@types/core-js": "0.9.36",
