--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "ng2-fundamentals-demo",
   "version": "1.0.0",
   "scripts": {
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run server\" \"node Server.js\"",
+    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run server\" \"http-server dist\"",
     "server": "node node_modules/ng2f-server/server.js",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "test": "karma start karma.conf.js",
-    "heroku-prebuild": "npm install -g http-server"
+    "preinstall":   "npm install -g http-server",
+    "postinstall":  "ng build --prod"
   },
   "keywords": [],
   "author": "",
