--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "ng2-fundamentals-demo",
   "version": "1.0.0",
   "scripts": {
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run server\" \"http-server dist\"",
-    "server": "node node_modules/ng2f-server/server.js",
+    "start": "http-server",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "test": "karma start karma.conf.js",
-    "preinstall":   "npm install -g http-server"
+    "preinstall":   "npm install -g http-server",
+    "postinstall": "ng build && mv dist/* ."
   },
   "keywords": [],
   "author": "",
@@ -35,9 +35,7 @@
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.40",
     "zone.js": "~0.6.26",
-    "angular-cli": "1.0.0-beta.19-3"
-  },
-  "devDependencies": {
+    "angular-cli": "1.0.0-beta.19-3",
     "@types/core-js": "0.9.36",
     "@types/jasmine": "^2.5.38",
     "@types/node": "~6.0.46",
@@ -48,6 +46,9 @@
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
     "typescript": "~2.0.3"
+  },
+  "devDependencies": {
+
   },
   "repository": {}
 }
