--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
       "url": "https://github.com/angular/angular.io/blob/master/LICENSE"
     }
   ],
+  "engines": {
+  "node": "6.10.0",
+  "npm": "3.10.10"
+  },
   "dependencies": {
     "@angular/common": "~2.2.0",
     "@angular/compiler": "~2.2.0",
