--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "ng2-fundamentals-demo",
   "version": "1.0.0",
   "scripts": {
-    "start": "http-server",
+    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run server\"",
+    "server": "node node_modules/ng2f-server/server.js",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "test": "karma start karma.conf.js",
-    "preinstall":   "npm install -g http-server",
-    "postinstall": "ng build && mv dist/* ."
+    "preinstall": "npm install -g http-server",
+    "build": "webpack  --progress"
   },
   "keywords": [],
   "author": "",
@@ -17,10 +18,6 @@
       "url": "https://github.com/angular/angular.io/blob/master/LICENSE"
     }
   ],
-  "engines": {
-  "node": "6.10.0",
-  "npm": "3.10.10"
-  },
   "dependencies": {
     "@angular/common": "~2.2.0",
     "@angular/compiler": "~2.2.0",
@@ -38,8 +35,9 @@
     "reflect-metadata": "~0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.40",
-    "zone.js": "~0.6.26",
-    "angular-cli": "1.0.0-beta.19-3",
+    "zone.js": "~0.6.26"
+  },
+  "devDependencies": {
     "@types/core-js": "0.9.36",
     "@types/jasmine": "^2.5.38",
     "@types/node": "~6.0.46",
@@ -50,9 +48,6 @@
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
     "typescript": "~2.0.3"
-  },
-  "devDependencies": {
-
   },
   "repository": {}
 }
